# py-qdd-model-script

./: .coverage  .gitignore  LICENSE  README.md  main.py  ohm_calc.py  pyproject.toml  run_app.py  run_cli.py  settings.toml
examples/: GIM-6010-8.json  default.json
parameters/core_materials/: 50H470.json
parameters/magnet_materials/: N42SH.json
parameters/wire_materials/: AWG20.json
py_qdd_model/: constants.py  exceptions.py  schema.py
py_qdd_model/analysis/: parallel_analyzer.py  results_analyzer.py
py_qdd_model/i18n/: en.json  jp.json  translator.py
py_qdd_model/models/: base_loss.py  copper_loss.py  driver_loss.py  gear_loss.py  iron_loss.py  motor_model.py  winding_model.py
py_qdd_model/three_d/: model_generator.py
py_qdd_model/ui/: constants.py  main_window.py  parameter_panel.py  plot_view.py  summary_panel.py
py_qdd_model/utils/: config.py  csv_exporter.py  io.py  material_manager.py  plotting.py
tests/: test_csv_exporter.py  test_material_manager.py  test_models.py  test_three_d_model.py  test_winding_model.py
